k8s/petitstream/base/deployments.yml
# yamllint disable rule:line-length
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petitstream-frontend
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: petitstream-frontend
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        component: petitstream-frontend
    spec:
      imagePullSecrets:
        - name: registry
      containers:
        - name: frontend
          image: petitstream/petitstream.com
          args:
            - frontend
          ports:
            - containerPort: 3000
              protocol: TCP
              name: frontend
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petitstream-backend-master
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: petitstream-backend
      role: master
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: petitstream-backend
        role: master
    spec:
      imagePullSecrets:
        - name: registry
      containers:
        - name: backend
          image: petitstream/petitstream.com
          args:
            - backend
          ports:
            - containerPort: 3000
              protocol: TCP
              name: backend
          readinessProbe:
            httpGet:
              path: /get_next_stream
              port: 3000
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /get_next_stream
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petitstream-backend-worker
spec:
  replicas: 0
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: petitstream-backend
      role: worker
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        component: petitstream-backend
        role: worker
    spec:
      imagePullSecrets:
        - name: registry
      containers:
        - name: backend
          image: petitstream/petitstream.com
          args:
            - backend
          ports:
            - containerPort: 3000
              protocol: TCP
              name: backend
          readinessProbe:
            httpGet:
              path: /get_next_stream
              port: 3000
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /get_next_stream
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 5
